--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>I am a web developer</h2>
     <hr>
     <h3><a href="./public/Aniversity Invite Project/index.html">Aniversity Party</a> (First Project)</h3>
-    <img src="./assets/images/Aniversity.png" alt="Pablo and Mariana" height="400">
+    <img src="Aniversity.png" alt="Pablo and Mariana" height="400">
 
     <h3><a href="./public/Movie Ranking Project/index.html">Movies</a> (Second Project)</h3>
     <img src="./assets/images/Movies.png" alt="" height="200">
